// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout cursor makes centered rows with hard breaks and multiple items 1`] = `
Array [
  Array [
    0,
    4,
    0,
    0,
    0,
  ],
  Array [
    4,
    7,
    0,
    50,
    0,
  ],
  Array [
    7,
    9,
    0,
    0,
    1,
  ],
  Array [
    9,
    10,
    0,
    100,
    1,
  ],
]
`;

exports[`layout cursor makes centered rows with hard breaks and multiple items 2`] = `
Float32Array [
  390,
  60,
  290,
  60,
]
`;

exports[`layout cursor makes centered rows with soft-wrapped breaks 1`] = `
Array [
  Array [
    0,
    3,
    0,
    0,
    0,
  ],
  Array [
    3,
    5,
    0,
    50,
    0,
  ],
  Array [
    5,
    7,
    0,
    0,
    0,
  ],
  Array [
    7,
    9,
    0,
    100,
    0,
  ],
  Array [
    9,
    10,
    0,
    150,
    0,
  ],
]
`;

exports[`layout cursor makes centered rows with soft-wrapped breaks 2`] = `
Float32Array [
  390,
  150,
]
`;

exports[`layout cursor makes justified rows with soft-wrapped breaks 1`] = `
Array [
  Array [
    0,
    3,
    0,
    0,
    0,
  ],
  Array [
    3,
    5,
    100,
    0,
    0,
  ],
  Array [
    5,
    7,
    0,
    0,
    0,
  ],
  Array [
    7,
    9,
    200,
    0,
    0,
  ],
  Array [
    9,
    10,
    0,
    150,
    0,
  ],
]
`;

exports[`layout cursor makes justified rows with soft-wrapped breaks 2`] = `
Float32Array [
  390,
  150,
]
`;

exports[`layout cursor makes right-justified rows with soft-wrapped breaks 1`] = `
Array [
  Array [
    0,
    3,
    0,
    0,
    0,
  ],
  Array [
    3,
    5,
    0,
    100,
    0,
  ],
  Array [
    5,
    7,
    0,
    0,
    0,
  ],
  Array [
    7,
    9,
    0,
    200,
    0,
  ],
  Array [
    9,
    10,
    0,
    300,
    0,
  ],
]
`;

exports[`layout cursor makes right-justified rows with soft-wrapped breaks 2`] = `
Float32Array [
  390,
  150,
]
`;
